2007-07-13  Ævar Arnfjörð Bjarmason  <avar@cpan.org> (0.12)

	* lib*: Removed lib*/Makefile which accidentally snuck in
	* Makefile.PL: Nuked DOS line endings

2007-07-12  Ævar Arnfjörð Bjarmason  <avar@cpan.org> (0.11)

	* lib*: Removed the Plan 9 build system and replaced it with
	        Makefile.PL's in each of the lib* directories. The
	        software should now port to Windows (and anywhere perl
	        builds). The removed files are lib*/Make.* and
	        lib*/Makefile

2007-07-07  Ævar Arnfjörð Bjarmason  <avar@cpan.org> (0.10)

	* Plan9.xs: Updated the split() special cases described to match blead
	* t/split.t: More tests for the above, taken from re::engine::PCRE
	* Plan9.h: Brought up to date with blead
	* Makefile.PL: { use utf8 } on the non-ASCII author name
	* inc: Updated to Module::Install 0.67
	* lib*: patch lib[fmt|utf|regexp] to build on Linux-x86_64 (patch sent
	        to Russ Cox)

2007-06-17 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.09)

	* Plan9.pm: Remove irrelevant link
	* Plan9.xs: stringarg + (strend - stringarg) == strend
	* Plan9.xs: Handle split " " and split /^/
	* Plan9.xs: M-x untabify
	* t/split.t: Test for the above
	* t/subst-loop.t: Add a note, still failing

2007-06-17 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.08)

	* Plan9.xs: PERL_UNUSED_ARG() for all Plan9_intuit arguments 
	* Plan9.h: Updated engine_plan9 to run on the new blead API

2007-05-19 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.07)

	* t/import.t: New test added while trying to write import/unimport
	              in XS which turned out to be too more trouble than it
	              was worth
	* t/unimport.t: ditto
	* MANIFEST.SKIP: added the TODO file

2007-05-18 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.06)

	* Plan9.pm: Fixed typo in POD (spotted by wolverian)
	* Plan9.xs: Plugged match memory leak
	* Plan9.xs: const on Plan9_exec & Plan9_dupe prototypes
	* t/00-compile.t: Test that the object isa Regexp